assets/css/style.css
/* ... */
  .ui-autocomplete a {
    color: #333; }
  .ui-autocomplete li {
    font-size: 13px; }

.padding-5 {
  padding: 5px; }

.right-align {
  text-align: right; }

select {
  width: auto; }

.turtle_pricelist hr {
  border: 0;
  border-bottom: 1px solid #ddd;
  margin-bottom: 0px; }
.turtle_pricelist .btn {
  margin-left: 10px; }
  .turtle_pricelist .btn.delete-item {
    margin-left: 5px; }
.turtle_pricelist .controls {
  margin-bottom: 10px; }
.turtle_pricelist input[type=text] {
  width: 250px; }
.turtle_pricelist .listings {
  margin-top: 30px; }
.turtle_pricelist .listing {
  margin-left: 50px; }
  .turtle_pricelist .listing .control-group {
    margin-bottom: 0px !important; }
  .turtle_pricelist .listing > i {
    margin-right: 10px;
    color: #aaa; }
  .turtle_pricelist .listing textarea {
    height: 40px;
    margin-left: 5px;
    min-height: 0 !important;
    width: 90% !important;
    margin-bottom: 10px !important; }
  .turtle_pricelist .listing input {
    margin-left: 5px; }
  .turtle_pricelist .listing input[type=file] {
    height: 10px; }
  .turtle_pricelist .listing input[type=number] {
    width: 50px; }
  .turtle_pricelist .listing .entry_image_holder {
    display: inline-block; }
  .turtle_pricelist .listing form {
    margin: 0px;
    padding: 0px; }
.turtle_pricelist img {
  max-width: 120px;
  margin-left: 10px;
  max-height: 20px; }
.turtle_pricelist .small-file-upload {
  margin-left: 30px !important; }

.turtle_image #slide-sorter {
  list-style-type: none; }
  .turtle_image #slide-sorter li.slide {
    width: 150px;
    height: 150px;
    margin: 5px;
    float: left;
    overflow: hidden; }
    .turtle_image #slide-sorter li.slide .header {
      margin: 3px 3px 3px 125px;
      position: absolute; }
      .turtle_image #slide-sorter li.slide .header .remove-slide {
        width: 15px;
        line-height: 15px;
        padding: 2px;
        float: right;
        margin-right: 2px;
        margin-top: 2px; }
.turtle_image #modal-fade {
  display: none;
  position: fixed;
  left: 0%;
  top: 0%;
  background-color: black;
  -moz-opacity: 0.7;
  opacity: .70;
  filter: alpha(opacity=70);
  width: 100%;
  height: 100%;
  z-index: 90; }
.turtle_image #upload-modal {
  padding: 10px;
  background-color: #eeeeee;
  border: 1px solid #dddddd;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  left: 30%;
  top: 30%;
  position: fixed;
  display: none;
  width: 40%;
  z-index: 100; }
  .turtle_image #upload-modal .header {
    margin: 1%; }
    .turtle_image #upload-modal .header h1 {
      line-height: 1.25em;
      font-size: 1.25em; }
  .turtle_image #upload-modal input[type="file"]#slide-upload {
    line-height: normal; }
  .turtle_image #upload-modal #portrait, .turtle_image #upload-modal #landscape, .turtle_image #upload-modal #tall {
    float: left;
    width: 31%;
    padding: 1%;
    display: none; }
  .turtle_image #upload-modal .footer {
    float: right;
    margin: 1%; }
.turtle_image #upload-modal.wide {
  width: 80%;
  left: 10%;
  top: 10%; }

.turtle_weekmenu hr {
  border: 0;
  border-bottom: 1px solid #ddd;
  margin-bottom: 0px; }
.turtle_weekmenu input[type=number] {
  width: 50px; }
.turtle_weekmenu .btn {
  margin-left: 10px; }
  .turtle_weekmenu .btn.delete-item {
    margin-left: 5px; }
.turtle_weekmenu input[type=text] {
  width: 250px; }
.turtle_weekmenu .listing {
  margin-top: 3px; }
  .turtle_weekmenu .listing > i {
    margin-right: 10px;
    color: #aaa;
    float: left; }
  .turtle_weekmenu .listing input[type=file] {
    height: 10px; }
  .turtle_weekmenu .listing .entry_image_holder {
    display: inline-block; }
  .turtle_weekmenu .listing form {
    margin: 0px;
    padding: 0px; }
.turtle_weekmenu img {
  max-width: 120px;
  margin-left: 10px;
  max-height: 20px; }
.turtle_weekmenu .small-file-upload {
  margin-left: 30px !important; }

.turtle_offers hr {
  border: 0;
  border-bottom: 1px solid #ddd;
  margin-bottom: 0px; }
.turtle_offers input[type=number] {
  width: 50px; }
.turtle_offers .btn {
  margin-left: 10px; }
  .turtle_offers .btn.delete-item {
    margin-left: 5px; }
.turtle_offers .offer textarea {
  margin-top: 10px;
  height: 40px;
  min-height: 0 !important;
  width: 90% !important;
  margin-bottom: 10px !important; }
.turtle_offers .offer input[type=file] {
  height: 10px; }
.turtle_offers .offer input[type=text] {
  width: 250px; }
.turtle_offers .offer .small-file-upload {
  margin-left: 0 !important; }
  .turtle_offers .offer .small-file-upload form {
    margin: 0; }
.turtle_offers img {
  max-width: 120px;
  margin-left: 10px;
  max-height: 20px; }
.turtle_offers .small-file-upload {
  margin-left: 30px !important; }

.turtle_signage hr {
  border: 0;
  border-bottom: 1px solid #ddd;
  margin-bottom: 0px; }
.turtle_signage .floor .btn {
  margin-left: 10px; }
  .turtle_signage .floor .btn.delete-floor-item {
    margin-left: 5px; }
.turtle_signage .controls {
  margin-bottom: 10px; }
.turtle_signage .listing {
  margin-top: 3px;
  margin-bottom: 10px;
  padding-left: 190px; }
  .turtle_signage .listing > i {
    margin-right: 10px;
    color: #aaa; }
  .turtle_signage .listing input[type=text] {
    width: 150px; }
  .turtle_signage .listing .floor_logo_holder {
    display: inline-block; }
  .turtle_signage .listing form {
    margin: 0px;
    padding: 0px; }
.turtle_signage img {
  max-width: 120px;
  margin-left: 10px;
  max-height: 20px; }
.turtle_signage .small-file-upload {
  margin-left: 30px !important; }

.alert.fixed {
  position: fixed;
  width: 100%;
  bottom: 0px;
  left: 0px;
  margin: 0px; }
/* ... */

